changed json to js

--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
 	<title>TextArea Demo Page</title>
 	<link rel="stylesheet" href="demo.css" type="text/css">		<!-- for textarea and demo -->
 	<script type="text/javascript" src="demo.js"></script>		<!-- for demo -->
-	<script type="text/javascript" src="tags.json"></script>	<!-- for zen -->
+	<script type="text/javascript" src="tags.js"></script>	<!-- for zen -->
 	<script type="text/javascript" src="pta.js"></script>
 </head>
 <body>
