--- a/README.html
+++ b/README.html
@@ -1,54 +1,34 @@
-<h1>Programming TextArea</h1>
-<b>enhancing textarea with Javascript</b>
-<br>
-A JS Library<br>
-<small>level: novice to intermediate, some exposure to Javascript is necessary</small>
-<br>
-<br>
+# Programming TextArea
 
-This project is not about online html (WYSIWYG) editors. 
-Although there are many of those available, 
-Programming Textarea is about how to make a textarea into a 
-simple programming text editor using Javascript. 
-HTML editors generally do not include features that simplify coding, 
-with the keyboard. As is, the HTML textarea has minimal capabilities. 
-This project builds many effective code writing enhancements into the standard 
-HTML textarea using only pure Javascript. In fact, at the end of the project 
-you will have a new JS library to implement your own supercharged programming textarea.
-<br><br>
-A complete understanding of this project may provide you with additional 
-insight into Javascript programming. You may even see better ways of 
-implementing the ideas presented here. At any rate if you are new to 
-Javascript you may gain a better understanding of how Javascript works 
-in the areas of event driven applications and string handling. 
-The format does assume that you have written web pages (you know HTML) 
-and have used Javascript in them, at a beginners level, at least.
-<br><br>
+enhancing textarea with Javascript 
+A JS Library
+level: novice to intermediate, some exposure to Javascript is necessary 
 
-<b>Functionality of	straight HTML textarea:</b>
-<li> multiple lines of text
-<li> select, delete, copy & paste lines, words or characters
-<li> control of word wrapping
-<li> Tabs, but not by default
-<br><br>
-<b>Programming Textarea:</b>
-<li> Keyboard Event Handlers to insert markup <Chapter 2>
-<li> line break = ctrl-enter
-<li> non-blanking space = alt-space
-<li> comments	= alt-c
-<li> join lines	= alt-j
-<li> ins line nbrs	= alt-l
-<li> More handlers can be easily added in the JS code.
+This project is not about online html (WYSIWYG) editors. Although there are many of those available, Programming Textarea is about how to make a textarea into a simple programming text editor using Javascript. HTML editors generally do not include features that simplify coding, with the keyboard. As is, the HTML textarea has minimal capabilities. This project builds many effective code writing enhancements into the standard HTML textarea using only pure Javascript. In fact, at the end of the project you will have a new JS library to implement your own supercharged programming textarea. 
 
-<li> implement tabs - single or selected lines<br>
-Really a minimal expectation for any text editor, but very
-useful when writing code. 
-<li> auto indentation “sticky tabs” <Chapter 4><br>
+A complete understanding of this project may provide you with additional insight into Javascript programming. You may even see better ways of implementing the ideas presented here. At any rate if you are new to Javascript you may gain a better understanding of how Javascript works in the areas of event driven applications and string handling. The format does assume that you have written web pages (you know HTML) and have used Javascript in them, at a beginners level, at least. 
+
+Functionality of	straight HTML textarea:
+multiple lines of text
+select, delete, copy & paste lines, words or characters
+control of word wrapping
+Tabs, but not by default 
+
+Programming Textarea:
+Keyboard Event Handlers to insert markup
+line break = ctrl-enter
+non-blanking space = alt-space
+comments	= alt-c
+join lines	= alt-j
+ins line nbrs	= alt-l
+More handlers can be easily added in the JS code.
+implement tabs - single or selected lines
+Really a minimal expectation for any text editor, but very useful when writing code.
+auto indentation “sticky tabs” 
 Indentation plays a crucial role in writing readable code.
-<li> search and replace <Chapter 5><br>
+search and replace 
 Most web browsers have a search function that works inside textarea, but not replace.
-<li> brace and paren matching <Chapter 6><br>
+brace and paren matching 
 Most programming languages work with braces { } to define blocks of code. Alt-q attempts to match the brace next to the cursor, which will select the block of code between the open and closing symbol.
-<li> simplified Zen coding capabilities <Chapter 7><br>
-By selecting a some text and pressing Alt-z the text acts as a key to find and insert text (markup or code) from a JSON table. 
-Alt-a will prompt for a tag name and then surround selected <tag>text</tag>
+simplified Zen coding capabilities 
+By selecting a some text and pressing Alt-z the text acts as a key to find and insert text (markup or code) from a JSON table. Alt-a will prompt for a tag name and then surround selected text
